<resources>
    <string name="app_name">MedoApp_Android</string>
    <string name="title_activity_login">Medo.ai</string>
    <string name="medo_logo">MEDO</string>
    <string name="prompt_email">enter username</string>
    <string name="prompt_password">enter password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in or Register</string>
    <string name="login_success_string">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fake_patient">John Doe</string>
    <string name="patient_status">Urgent</string>
    <string name="title_activity_viewscan">ViewscanActivity</string>
</resources>
